# shim-review

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  check_nx_bit.sh  shimx64.efi
data/: sbat.viasat.csv  shimx64.efi  viasatuk.der
dev/: CMakeLists.txt  Dockerfile
dev/data/: BOOTX64.EFI  sbat.viasat.csv
keys/: CustomerSupport_Viasat.asc  SecAlert_Viasat.asc
setup/: vm_0_setup.py  vm_1_build.py  vm_2_clean.py
